llm-d/ai-grid/picker-fqdn/istio/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: praxis-demo-origdst
  namespace: openshift-ingress
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match: &id001
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          failure_mode_allow: false
          grpc_service:
            envoy_grpc:
              cluster_name: praxis_ext_proc
            timeout: 300s
          message_timeout: 300s
          metadata_options:
            receiving_namespaces:
              untyped:
              - envoy.lb
          processing_mode:
            request_header_mode: SEND
            response_header_mode: SKIP
            request_body_mode: BUFFERED
            response_body_mode: NONE
            request_trailer_mode: SKIP
            response_trailer_mode: SKIP
  - applyTo: HTTP_FILTER
    match: *id001
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.header_mutation
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
          mutations:
            request_mutations:
            - append:
                header:
                  key: x-chosen-host
                  value: '%DYNAMIC_METADATA(["envoy.lb","x-gateway-destination-endpoint"])%'
                append_action: OVERWRITE_IF_EXISTS_OR_ADD
  - applyTo: HTTP_FILTER
    match: *id001
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.dynamic_forward_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
          dns_cache_config: &id002
            name: dfp_cache
            dns_lookup_family: V4_ONLY
  - applyTo: CLUSTER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        connect_timeout: 5s
        load_assignment:
          cluster_name: praxis_ext_proc
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: praxis-demo-extproc.praxis-istio-demo.svc.cluster.local
                    port_value: 9004
        name: praxis_ext_proc
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - h2
              validation_context:
                trust_chain_verification: ACCEPT_UNTRUSTED
        type: STRICT_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
  - applyTo: CLUSTER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: dfp_cluster
        lb_policy: CLUSTER_PROVIDED
        connect_timeout: 5s
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config: *id002
  - applyTo: HTTP_ROUTE
    match:
      context: GATEWAY
      routeConfiguration:
        name: http.80
        vhost:
          name: praxis-demo.apps.dagobah.hexfusion.local:80
          route:
            name: praxis-istio-demo.catch-all.0
    patch:
      operation: MERGE
      value:
        route:
          cluster: dfp_cluster
          timeout: 300s
        typed_per_filter_config:
          envoy.filters.http.dynamic_forward_proxy:
            '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
            host_rewrite_header: x-chosen-host
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: praxis-istio-demo-gw
